testsuite/tests/interpreter_errors/add_to_bool_error/test.out
main.adb
script:1:8: error: Expected Int but got Bool
1 | print (true + 2)
  |        ^^^^^^^^ 

